# EnergyMaxUSB

./: .pre-commit-config.yaml  pyproject.toml
src/energymaxusb/: __init__.py  sensor.py
